# Robot

./: .dockerignore  .gitignore  .robot_ipython.py.swp  Dockerfile  MEMORY.md  NOTES.md  README.md  RobotDefinitions.py  gp180_config.json  gp225_config.json  gp225_scene.glb  gp280_config.json  gp280_scene_v3.glb  hexapod_config.json  hexapod_scene.glb  i16_config.json  i19_config.json  import_hexapod.py  import_robot.py  install_dependencies.py  main.py  meca500_config.json  motomini_config.json  motomini_scene.glb  package.json  planner.py  pyproject.toml  remote_control.py  requirements.txt  robot_config.json  robot_ipython.py  server.py  threejs_scene.html  update_model.py  viewer.css
.claude/commands/: build-kappa-diffractometer.md  build-viewer.md  calibrate-ee.md
.github/workflows/: _container.yml  ci.yml
GNKinematics/: kinematics.py
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  ingress.yaml  service.yaml
js/: collision-worker.js  collision.js  device.js  hexapod.js  kinematics.js  main.js  panel.js  scene.js  state.js  stl.js  storage.js  vr.js  websocket.js
robot/: __init__.py  ik.py  kinematics.py  robot.py  ur5_ik.py
visualisation/: __init__.py  visualiser.py
